# Currencies

./: .gitignore  config.py  pyproject.toml
src/application/: fetcher.py  main.py  transformer.py
src/infrastructure/clients/: base.py  cbr.py
src/infrastructure/storage/: storage.py  storage_exceptions.py
src/models/: valutes.py
