[project]
name = "restapi"
version = "0.1.0"
description = ""
authors = [
    {name = "Maksim",email = "andreevmakc@yandex.ru"}
]
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "requests (>=2.32.4,<3.0.0)",
    "base (>=0.0.0,<0.0.1)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
